[gd_scene load_steps=12 format=2]

[ext_resource path="res://screens/lobby/lobby.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/customfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/lato/startmenu.theme" type="Theme" id=3]
[ext_resource path="res://assets/sfx/select.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/music/mainmusic.mp3" type="AudioStream" id=5]
[ext_resource path="res://assets/fonts/lato/Lato-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/sprites/pngwing.com (1).png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 6 )

[sub_resource type="GDScript" id=2]
script/source = "extends Button




"

[sub_resource type="Animation" id=3]
resource_name = "color change"
length = 16.0
loop = true

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 2
emission_box_extents = Vector3( 1, 600, 1 )
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 200.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 3.0
scale_random = 0.3

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.478431, 0.478431, 0.478431, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -181.5
margin_top = 213.0
margin_right = 181.5
margin_bottom = 301.0
custom_fonts/font = SubResource( 1 )
text = "Start Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.67992
margin_top = -1.33484
margin_right = 3.67993
margin_bottom = -1.33484
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 832.0
margin_top = 454.0
margin_right = 1087.0
margin_bottom = 626.0

[node name="GridContainer" type="GridContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 255.0
margin_bottom = 172.0
custom_constants/vseparation = 36

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_right = 255.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 2 )
custom_constants/hseparation = 1
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_top = 104.0
margin_right = 255.0
margin_bottom = 172.0
custom_fonts/font = ExtResource( 2 )
text = "Quit"
script = SubResource( 2 )

[node name="Sound button" type="Button" parent="."]
anchor_left = 0.99922
anchor_right = 0.99922
margin_left = -266.502
margin_top = 47.0
margin_right = -138.502
margin_bottom = 175.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
icon = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("")
"anims/color change" = SubResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Particles2D" type="Particles2D" parent="CanvasLayer"]
position = Vector2( 1924.55, 596.406 )
amount = 100
lifetime = 20.0
speed_scale = 0.5
process_material = SubResource( 4 )

[node name="MainMenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0

[node name="SelectSound" type="AudioStreamPlayer" parent="."]
process_priority = 1
stream = ExtResource( 4 )

[connection signal="pressed" from="CenterContainer/VBoxContainer/GridContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/GridContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="pressed" from="Sound button" to="." method="_on_Sound_button_pressed"]
